Fix string formatting in report-center.html

--- a/report-center.html
+++ b/report-center.html
@@ -568,7 +568,7 @@
                                 <td>2024-07-01 09:00</td>
                                 <td><span class="auto-generated">心瞳AI系统</span></td>
                                 <td>
-                                    <button class="action-btn" onclick="downloadReport('任务目标 (Task Objective)__请为我的\"心瞳\"项目生成一份专业的__《区域性儿童月....pdf')">下载</button>
+                                    <button class="action-btn" onclick="downloadReport('《区域性儿童月....pdf')">下载</button>
                                     <button class="action-btn delete-btn">删除</button>
                                 </td>
                             </tr>
